--- a/splash/css/main.less
+++ b/splash/css/main.less
@@ -80,6 +80,7 @@ body {
 			border-bottom: 1px solid rgba(255,255,255,.4);
 			color: rgba(255,255,255,.8);
 			text-shadow: 0 1px 1px rgba(0,0,0,.9);
+			margin: 0 !important;
 			}
 		input:focus, select:focus, textarea:focus, button:focus {
 			outline: none;
