--- a/splash/css/main.less
+++ b/splash/css/main.less
@@ -112,6 +112,11 @@ body {
 
 			}
 		}
+		.lrdiscoverwidget .site-powered-by {
+			margin: 90px 0 0 5px;
+			color: #615d4f !important;
+			text-shadow: text-shadow: 0 1px 0 rgba(255,255,255,.4);
+			}
 		#launch-message {
 			position: absolute;
 			width: 400px;
