--- a/splash/css/main.less
+++ b/splash/css/main.less
@@ -124,9 +124,12 @@ body {
 	}
 
 .lrdiscoverwidget .site-powered-by {
-	margin: 90px 0 0 5px;
+	margin: 90px 0 0 5px !important;
 	color: #615d4f !important;
+	font-size: 110% !important;
+	text-align: left !important;
 	text-shadow: 0 1px 0 rgba(255,255,255,.4);
+	font-family: "museo-sans-rounded", sans-serif;
 	}
 			
 #footer {
