--- a/splash/css/main.less
+++ b/splash/css/main.less
@@ -51,6 +51,7 @@ body {
 	top: 570px;
 	opacity: 0;
 	font-weight: 700;
+	opacity: 0;
 	#mail-icon {
 		position: absolute;
 		width: 24px;
@@ -142,7 +143,7 @@ body {
 	text-shadow: 0 1px rgba(255,255,255,.1) !important;
 	}
 
-.lrdiscoverwidget .lrhidden {
+.lrhidden {
 	background: rgba(0,0,0,.9);
 	border-radius: 4px;
 	position: absolute;
@@ -151,9 +152,6 @@ body {
 	padding: 10px;
 	z-index: 5000;
 	}
-.lrhidden {
-	display: none !important;
-	}				
 #footer {
 	opacity: 0;
 	position: fixed;
