Updated the launchrock logo with custom image

--- a/splash/css/main.less
+++ b/splash/css/main.less
@@ -125,12 +125,20 @@ body {
 	}
 
 .lrdiscoverwidget .site-powered-by {
-	margin: 90px 0 0 5px !important;
-	color: #615d4f !important;
-	font-size: 110% !important;
+	margin: 85px 0 0 5px !important;
+	color: rgba(97,93,79,.5) !important;
+	font-size: 115% !important;
 	text-align: left !important;
 	text-shadow: 0 1px 0 rgba(255,255,255,.4);
 	font-family: "museo-sans-rounded", sans-serif;
+	a {
+		position: relative;
+		width: 93px;
+		height: 13px;
+		top: 2px !important;
+		left: 2px !important;
+		background: url(../img/launchrock-logo.png) 0 50% no-repeat !important;
+		} 
 	}
 	
 .signup_error {
@@ -292,6 +300,7 @@ body {
 			text-shadow: 0 1px 0 rgba(0,0,0,.3);
 			-webkit-appearance: none;
 			font-size: 90%;
+			margin: 0 !important;
 			}
 		input:focus, select:focus, textarea:focus, button:focus {
 			outline: none;
