--- a/splash/css/main.less
+++ b/splash/css/main.less
@@ -116,7 +116,7 @@ body {
 		#launch-message {
 			position: absolute;
 			width: 400px;
-			top: 65px;
+			top: 68px;
 			left: 21px;
 			font-size: 90%;
 			color: rgba(0,0,0,.6);
@@ -125,20 +125,23 @@ body {
 	}
 
 .lrdiscoverwidget .site-powered-by {
-	margin: 85px 0 0 5px !important;
-	color: rgba(97,93,79,.5) !important;
+	margin: 88px 0 0 5px !important;
+	color: rgba(97,93,79,.6) !important;
 	font-size: 115% !important;
 	text-align: left !important;
-	text-shadow: 0 1px 0 rgba(255,255,255,.4);
+	text-shadow: 0 1px 0 rgba(255,255,255,.7);
 	font-family: "museo-sans-rounded", sans-serif;
 	a {
 		position: relative;
-		width: 93px;
-		height: 13px;
+		width: 94px;
+		height: 14px;
 		top: 2px !important;
-		left: 2px !important;
+		left: 0 !important;
 		background: url(../img/launchrock-logo.png) 0 50% no-repeat !important;
 		} 
+	}
+.lrdiscoverwidget .site-powered-by:first-letter{
+	text-transform: capitalize
 	}
 	
 .signup_error {
@@ -153,7 +156,9 @@ body {
 
 .lrhidden {
 	background: rgba(0,0,0,.9);
-	border-radius: 4px;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	border-radius: 8px;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -317,7 +322,8 @@ body {
 			border: 1px solid rgba(0,0,0,.6);
 			top: 4px;
 			margin: 0 !important;
-			left: 50%;
+			left: auto !important;
+			right: -300px;
 			box-shadow: inset 0 rgba(255,255,255,.7) 1px 1px;
 			color: #152e3b;
 			font-weight: bold;
@@ -343,10 +349,29 @@ body {
 			text-shadow: 0 1px 0 rgba(255,255,255,.7);
 			}
 	}
+.lrdiscoverwidget .site-powered-by {
+	margin: 88px 0 0 15px !important;
+	color: rgba(97,93,79,.6) !important;
+	font-size: 110% !important;
+	text-align: left !important;
+	text-shadow: 0 1px 0 rgba(255,255,255,.7);
+	font-family: "museo-sans-rounded", sans-serif;
+	a {
+		position: relative;
+		width: 94px;
+		height: 14px;
+		top: 2px !important;
+		left: 0 !important;
+		background: url(../img/launchrock-logo.png) 0 50% no-repeat !important;
+		} 
+	}
+.lrdiscoverwidget .site-powered-by:first-letter{
+	text-transform: capitalize
+	}
 #iphone {
 	opacity: 0;
 	position: relative;
-	top: 360px;
+	top: 400px;
 	width: auto;
 	height: 802px;
 	position: absolute;
