--- a/splash/css/main.less
+++ b/splash/css/main.less
@@ -279,6 +279,7 @@ body {
 	font-weight: 700;
 	width: 100%;
 	height: 100px;
+	overflow: hidden;
 	#mail-icon {
 		display: none;
 		}
@@ -292,7 +293,7 @@ body {
 			position: absolute;
 			top: 0;
 			left: 20px;
-			width: 250px;
+			width: 200px;
 			border: none;
 			padding: 10px 15px!important;
 			height: 25px;
@@ -323,7 +324,7 @@ body {
 			top: 4px;
 			margin: 0 !important;
 			left: auto !important;
-			right: -300px;
+			right: -250px;
 			box-shadow: inset 0 rgba(255,255,255,.7) 1px 1px;
 			color: #152e3b;
 			font-weight: bold;
