fixed display of retina logo

--- a/css/main.less
+++ b/css/main.less
@@ -437,7 +437,7 @@ only screen and (                min-resolution: 2dppx) {
 		}
 	.lrdiscoverwidget .site-powered-by a {
 		background-image: url(../img/launchrock-logo@2x.png) !important;
-		background-size: 94px 14px;
+		background-size: 94px 14px !important;
 		}
 	}
 /* end all Retina */
